--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,5 @@
-<img [src]="profile.image" alt="" />
-<div>{{profile.name}}</div>
+<div>
+  <img [src]="profile.image" alt="" />
+  <div>{{profile.name}}</div>
+</div>
+
